# massiv-vector-matrix-multiply

./: README.md
massiv-vector-matrix-multiply/: CHANGELOG.md  massiv-vector-matrix-multiply.cabal  stack.yaml
massiv-vector-matrix-multiply/bench/: Bench.hs
massiv-vector-matrix-multiply/cbits/: mult_vec_mat.c
massiv-vector-matrix-multiply/src/Data/Massiv/Array/Numeric/: Optimized.hs
massiv-vector-matrix-multiply/tests/Test/Massiv/Array/Numeric/: OptimizedSpec.hs
